--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,8 @@
 .header{
     display: flex;
     align-items: center; 
-    justify-content: space-between; 
+    justify-content: space-between;
+    padding: 40px 200px; 
     &__logo{
         width: 150px;
         height: auto;
