--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -3,12 +3,19 @@
 .banner{
     padding: 0 150px;
     position: relative;
-    &__image{
+    &__home{
         width: 100%;
         height: 220px;
         object-fit: cover;
         border-radius: 30px;
         filter: brightness(35%);
+    }
+    &__about{
+        width: 100%;
+        height: 220px;
+        object-fit: cover;
+        border-radius: 30px;
+        filter: brightness(85%);
     }
     &__title{
         position: absolute;
