--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 //Color
 $primary-color : #FF6060;
 $background-color : #000000;
+$background-color-secondary : #F6F6F6;
 
 //Size
 $size-text : 17px;
