--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -3,12 +3,18 @@
 .banner{
     padding: 0 150px;
     position: relative;
+    @media (max-width: 768px){
+        padding: 0 20px;
+    }
     &__home{
         width: 100%;
         height: 220px;
         object-fit: cover;
         border-radius: 30px;
         filter: brightness(35%);
+        @media (max-width: 768px){
+            height: 110px;
+        }
     }
     &__about{
         width: 100%;
@@ -16,6 +22,9 @@
         object-fit: cover;
         border-radius: 30px;
         filter: brightness(85%);
+        @media (max-width: 768px){
+            height: 110px;
+        }
     }
     &__title{
         position: absolute;
@@ -24,8 +33,17 @@
         transform: translate(-50%, -50%); /* Centre le contenu */
         text-align: center;
         color: white;
+        @media (max-width: 768px){
+            left: 30px;
+            transform: translateY(-50%);
+            text-align: left;
+            padding: 10px;
+        }
         &__textContent{
             font-size: variables.$size-title;
+            @media (max-width: 768px){
+                font-size: 22px;
+            }
         }
     }
 }
