--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -5,6 +5,10 @@
     padding-left: 300px;
     margin-top: 30px;
     margin-bottom: 30px;
+    @media (max-width: 768px){
+        padding: 0 20px;
+        margin: 20px;
+    }
     &__titleContent{
         display: flex;
         justify-content: space-between;
