Finalisation page Housing (sans media queries)

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,11 +1,11 @@
 //Color
-$primary-color : #FF6060;
-$background-color : #000000;
-$background-color-secondary : #F6F6F6;
+$primary-color: #ff6060;
+$background-color: #000000;
+$background-color-secondary: #f6f6f6;
 
 //Size
-$size-text : 17px;
-$size-title : 40px;
+$size-text: 17px;
+$size-title: 35px;
 
 //Police
-$text-font : 'Montserrat', sans-serif;
+$text-font: 'Montserrat', sans-serif;
