--- a/src/sass/bases/_base.scss
+++ b/src/sass/bases/_base.scss
@@ -1,23 +1,24 @@
-@use '../abstracts/variables' as var;
+@use '../abstracts/variables';
 
-body{
-    font-family: var.$text-font;
-    font-size: var.$size-text;
-    max-width: 1800px;
-    padding-top: 10px;
-    margin: 0 auto;
+body {
+  font-family: variables.$text-font;
+  font-size: variables.$size-text;
+  max-width: 1800px;
+  padding-top: 10px;
+  margin: 0 auto;
 }
 
-ul{
-    list-style: none;
-    margin: 0;
+ul,
+li {
+  list-style: none;
+  margin: 0;
 }
 
-a{
-    text-decoration: none;
-    color: black;
+a {
+  text-decoration: none;
+  color: black;
 }
 
-a:hover{
-    text-decoration: underline;
+a:hover {
+  text-decoration: underline;
 }
