--- a/src/components/Slider/slider.scss
+++ b/src/components/Slider/slider.scss
@@ -2,11 +2,17 @@
   position: relative;
   padding: 0 150px;
   width: 100%;
+  @media (max-width: 768px) {
+    padding: 20px;
+  }
   &__image {
     height: 400px;
     width: 100%;
     border-radius: 20px;
     object-fit: cover;
+    @media (max-width: 768px) {
+      height: 250px;
+    }
   }
   &__arrow {
     position: absolute;
@@ -16,11 +22,21 @@
     color: white;
     cursor: pointer;
     z-index: 10;
+    @media (max-width: 768px) {
+      width: 20px;
+      height: auto;
+    }
     &--left {
       left: 180px;
+      @media (max-width: 768px) {
+        left: 30px;
+      }
     }
     &--right {
       right: 180px;
+      @media (max-width: 768px) {
+        right: 30px;
+      }
     }
   }
   &__indicator {
