Modif mise en page et debug

--- a/src/components/Slider/slider.scss
+++ b/src/components/Slider/slider.scss
@@ -45,5 +45,8 @@
     left: 50%;
     transform: translateX(-50%);
     color: white;
+    @media (max-width: 768px){
+      display: none;
+    }
   }
 }
