--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -1,27 +1,32 @@
 .cards {
   margin: 50px 150px;
-  padding: 40px calc((100% - ((400px * 3) + (50px * (3 - 1)))) / 2);
-  display: flex;
-  flex-wrap: wrap;
+  padding: 40px;
+  display: grid;
   gap: 50px;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
   background-color: #f6f6f6;
   border-radius: 30px;
+  @media (max-width: 1400px){
+    grid-template-columns: 1fr 1fr;
+  }
   @media (max-width: 768px) {
+    grid-template-columns: 1fr;
     background-color: white;
-    margin: 0;
-    padding: 20px;
-    justify-content: center;
+    margin: 20px;
     gap: 20px;
+    padding: 20px;
   }
   .card {
     position: relative;
     &__image {
-      width: 300px;
+      width: 100%;
       height: 300px;
       object-fit: cover;
       border-radius: 10px;
       @media (max-width: 768px) {
         height: 250px;
+        width: 100%;
       }
     }
     &__title {
