--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,7 +21,7 @@
     &__item {
       padding-right: 50px;
       @media (max-width: 768px) {
-        padding-right: 40px;
+        padding-right: 20px;
       }
       &__maj {
         @media (max-width: 768px) {
@@ -30,4 +30,7 @@
       }
     }
   }
+}
+.active{
+  text-decoration: underline;
 }
