--- a/src/components/Tag/tag.scss
+++ b/src/components/Tag/tag.scss
@@ -6,10 +6,14 @@
   padding: 5px 15px;
   border-radius: 10px;
   font-size: 12px;
-  margin-right: 10px;
-  width: 150px;
+  min-width: 100px;
   text-align: center;
+  margin-right: 5px;
   &__title {
     color: white;
+  }
+  p{
+    margin: 0;
+    padding: 0;
   }
 }
