--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -7,9 +7,11 @@
   justify-content: center;
   background-color: #f6f6f6;
   border-radius: 30px;
-  @media (max-width: 1400px){
+
+  @media (max-width: 1400px) {
     grid-template-columns: 1fr 1fr;
   }
+
   @media (max-width: 768px) {
     grid-template-columns: 1fr;
     background-color: white;
@@ -17,18 +19,39 @@
     gap: 20px;
     padding: 20px;
   }
+
   .card {
     position: relative;
+
     &__image {
+      position: relative;
       width: 100%;
       height: 300px;
-      object-fit: cover;
       border-radius: 10px;
+      overflow: hidden; 
+
+      &::after {
+        content: '';
+        position: absolute;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35));
+        width: 100%;
+        height: 100px;
+        bottom: 0; 
+        left: 0;
+        z-index: 1;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
       @media (max-width: 768px) {
         height: 250px;
-        width: 100%;
       }
     }
+
     &__title {
       position: absolute;
       bottom: 7px;
