--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -33,7 +33,7 @@
       &::after {
         content: '';
         position: absolute;
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35));
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
         width: 100%;
         height: 100px;
         bottom: 0; 
@@ -65,6 +65,7 @@
       text-align: left;
       width: 70%;
       white-space: normal;
+      z-index: 2;
     }
   }
 }
